--- a/holiday-website.html
+++ b/holiday-website.html
@@ -15,6 +15,8 @@
       <li>Went clubbing at Ornos Beach</li>
       <li>My Brother's Wedding!</li>
     </ul>
+    <img src="greece1.jpg">
+    <img src="greece2.jpg">
 
     <h3>Venice</h3>
     <p>Here are some of the things I did in Venice</p>
