add greece and venice photos

--- a/holiday-website.html
+++ b/holiday-website.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jess's holiday page</title>
+    <title>Jess's holiday website</title>
   </head>
   <body>
     <h1>My Europe Trip</h1>
-    <h2>These are some of the places I visited in Europe </h2>
+    <h2>These are the places I went.</h2>
 
-    <h3>Greece</h3>
-    <p>Here are some of the things I did in Mykonos</p>
+    <h3>Mykonos</h3>
+    <p>These are some of the things I did in Mykonos</p>
     <ul>
-      <li>Sailing on a yacht</li>
-      <li>Checked out the ruins in Delos</li>
-      <li>Went clubbing at Ornos Beach</li>
-      <li>My Brother's Wedding!</li>
+      <li>My brother Ben got married</li>
+      <li>I went out on a yacht to the island of Delos</li>
+      <li>I went clubbing at Ornos Beach</li>
+      <li>I ate lots of Greek food</li>
+      <li>I explored some ruins on another island</li>
     </ul>
-    <img src="greece1.jpg">
-    <img src="greece2.jpg">
+<img src="greece1.jpg" alt=""><img src="greece2.jpg" alt="">
+
 
     <h3>Venice</h3>
-    <p>Here are some of the things I did in Venice</p>
+    <p>These are some of the things I did in Venice</p>
     <ul>
-      <li>Met up with my friend Steph!</li>
-      <li>Checked out the beach at Lido</li>
-      <li>Watched glass blowing in Murano</li>
+      <li>Met up with my friend Steph</li>
+      <li>Ate a lot of Gelato!</li>
+      <li>Watched glass blowing in Milano</li>
+      <li>Went to the beach in Lido</li>
       <li>Ate a lot of pasta!</li>
+    </ul>
+    <img src="venice1.jpg" alt=""><img src="venice2.jpg" alt="">
+
+    <h3>Prague</h3>
+    <p>These are some of the things I did in Prague</p>
+    <ul>
+      <li>Walked over a bridge</li>
+      <li>Went to the John Lennon wall</li>
+      <li>Visited a castle</li>
+      <li>Got pretty sunburnt</li>
+      <li>Ate a lot of meat and potato</li>
     </ul>
 
     <h3>Prague</h3>
-    <p>Here are some of the things I did in Prague</p>
+    <p>These are some of the things I did in Prague</p>
     <ul>
-      <li>Checked out a castle</li>
-      <li>Took photos at the John Lennon wall</li>
-      <li>Found the world's best candy shop</li>
-      <li>Explored Old Prague</li>
+      <li>Walked over a bridge</li>
+      <li>Went to the John Lennon wall</li>
+      <li>Visited a castle</li>
+      <li>Got pretty sunburnt</li>
+      <li>Ate a lot of meat and potato</li>
     </ul>
 
-    <h3>Dublin</h3>
-    <p>Here are some of the things I did in Dublin</p>
-    <ul>
-      <li>Visited some castles</li>
-      <li>Listened to some irish music in a pub</li>
-      <li>Explored Temple Bar</li>
-      <li>Went to Trinity College and the Old library</li>
-    </ul>
-
-    <p>Thanks for reading about my holiday</p>
+    <p>Thanks for reading about my holiday!</p>
   </body>
 </html>
