changed pic size for greece and venice

--- a/holiday-website.html
+++ b/holiday-website.html
@@ -16,7 +16,8 @@
       <li>I ate lots of Greek food</li>
       <li>I explored some ruins on another island</li>
     </ul>
-<img src="greece1.jpg" alt=""><img src="greece2.jpg" alt="">
+<img src="greece1.jpg" style="width: 50%; height: 50%"/>​
+<img src="greece2.jpg" style="width: 50%; height: 50%"/>​
 
 
     <h3>Venice</h3>
@@ -28,7 +29,8 @@
       <li>Went to the beach in Lido</li>
       <li>Ate a lot of pasta!</li>
     </ul>
-    <img src="venice1.jpg" alt=""><img src="venice2.jpg" alt="">
+  <img src="venice1.jpg" style="width: 50%; height: 50%"/>​
+<img src="venice2.jpg" style="width: 50%; height: 50%"/>​
 
     <h3>Prague</h3>
     <p>These are some of the things I did in Prague</p>
