add prague and dublin photos

--- a/holiday-website.html
+++ b/holiday-website.html
@@ -29,7 +29,7 @@
       <li>Went to the beach in Lido</li>
       <li>Ate a lot of pasta!</li>
     </ul>
-  <img src="venice1.jpg" style="width: 50%; height: 50%"/>​
+<img src="venice1.jpg" style="width: 50%; height: 50%"/>​
 <img src="venice2.jpg" style="width: 50%; height: 50%"/>​
 
     <h3>Prague</h3>
@@ -41,16 +41,19 @@
       <li>Got pretty sunburnt</li>
       <li>Ate a lot of meat and potato</li>
     </ul>
+  <img src="prague1.jpg" style="width: 50%; height: 50%"/>​
+  <img src="prague2.jpg" style="width: 50%; height: 50%"/>​
 
-    <h3>Prague</h3>
-    <p>These are some of the things I did in Prague</p>
+    <h3>Dublin</h3>
+    <p>These are some of the things I did in Dublin</p>
     <ul>
-      <li>Walked over a bridge</li>
-      <li>Went to the John Lennon wall</li>
-      <li>Visited a castle</li>
-      <li>Got pretty sunburnt</li>
-      <li>Ate a lot of meat and potato</li>
+      <li>Listened to irish bands play irish songs in an irish pub!</li>
+      <li>Drove around to lots of castles</li>
+      <li>Checked out Temple Bar</li>
+      <li>Visited Trinity College and the Old Dublin Library</li>
     </ul>
+    <img src="dublin1.jpg" style="width: 50%; height: 50%"/>​
+    <img src="dublin2.jpg" style="width: 50%; height: 50%"/>​
 
     <p>Thanks for reading about my holiday!</p>
   </body>
