--- a/holiday-website.html
+++ b/holiday-website.html
@@ -4,53 +4,52 @@
     <title>Jess's holiday website</title>
   </head>
   <body>
-    <h1>My Europe Trip</h1>
+    <h1><strong>My Europe Trip<strong></h1>
     <h2>These are the places I went.</h2>
 
-    <h3>Mykonos</h3>
+    <h3><strong>Mykonos<strong></h3>
     <p>These are some of the things I did in Mykonos</p>
     <ul>
-      <li>My brother Ben got married</li>
-      <li>I went out on a yacht to the island of Delos</li>
-      <li>I went clubbing at Ornos Beach</li>
-      <li>I ate lots of Greek food</li>
-      <li>I explored some ruins on another island</li>
+      <li>My brother Ben got <em>married<em></li>
+      <li>I went <em>sailing<em> on a yacht to the island of Delos</li>
+      <li>I went <em>clubbing<em> at Ornos Beach</li>
+      <li>I ate lots of <em>Greek food<em></li>
+      <li>I explored <em>the island of Delos<em></li>
     </ul>
 <img src="greece1.jpg" style="width: 50%; height: 50%"/>​
 <img src="greece2.jpg" style="width: 50%; height: 50%"/>​
 
 
-    <h3>Venice</h3>
+    <h3><strong>Venice<strong></h3>
     <p>These are some of the things I did in Venice</p>
     <ul>
-      <li>Met up with my friend Steph</li>
-      <li>Ate a lot of Gelato!</li>
-      <li>Watched glass blowing in Milano</li>
-      <li>Went to the beach in Lido</li>
-      <li>Ate a lot of pasta!</li>
+      <li>Met up with my friend <em>Steph<em></li>
+      <li>Ate a lot of <em>Gelato!<em></li>
+      <li>Watched <em>glass blowing<em> in Milano</li>
+      <li>Went to <em>the beach<em> in Lido</li>
+      <li>Ate <em>lots of pasta<em>!</li>
     </ul>
 <img src="venice1.jpg" style="width: 50%; height: 50%"/>​
 <img src="venice2.jpg" style="width: 50%; height: 50%"/>​
 
-    <h3>Prague</h3>
+    <h3><strong>Prague<strong></h3>
     <p>These are some of the things I did in Prague</p>
     <ul>
       <li>Walked over a bridge</li>
-      <li>Went to the John Lennon wall</li>
-      <li>Visited a castle</li>
+      <li>Went to <em>the John Lennon wall!<em></li>
+      <li>Visited a <em>castle<em></li>
       <li>Got pretty sunburnt</li>
-      <li>Ate a lot of meat and potato</li>
     </ul>
   <img src="prague1.jpg" style="width: 50%; height: 50%"/>​
   <img src="prague2.jpg" style="width: 50%; height: 50%"/>​
 
-    <h3>Dublin</h3>
+    <h3><strong>Dublin<strong></h3>
     <p>These are some of the things I did in Dublin</p>
     <ul>
-      <li>Listened to irish bands play irish songs in an irish pub!</li>
-      <li>Drove around to lots of castles</li>
-      <li>Checked out Temple Bar</li>
-      <li>Visited Trinity College and the Old Dublin Library</li>
+      <li>Listened to <em>irish<em> bands play <em>irish songs<em> in an <em>irish pub!<em></li>
+      <li>Drove around to <em>lots of castles<em></li>
+      <li>Checked out <em>Temple Bar<em></li>
+      <li>Visited Trinity College and the <em>Old Dublin Library<em></li>
     </ul>
     <img src="dublin1.jpg" style="width: 50%; height: 50%"/>​
     <img src="dublin2.jpg" style="width: 50%; height: 50%"/>​
