--- a/holiday-website.html
+++ b/holiday-website.html
@@ -4,52 +4,52 @@
     <title>Jess's holiday website</title>
   </head>
   <body>
-    <h1><strong>My Europe Trip<strong></h1>
+    <h1><strong>My Europe Trip</strong></h1>
     <h2>These are the places I went.</h2>
 
-    <h3><strong>Mykonos<strong></h3>
+    <h3><strong>Mykonos</strong></h3>
     <p>These are some of the things I did in Mykonos</p>
     <ul>
-      <li>My brother Ben got <em>married<em></li>
-      <li>I went <em>sailing<em> on a yacht to the island of Delos</li>
-      <li>I went <em>clubbing<em> at Ornos Beach</li>
-      <li>I ate lots of <em>Greek food<em></li>
-      <li>I explored <em>the island of Delos<em></li>
+      <li>My brother Ben got <em>married</em></li>
+      <li>I went <em>sailing</em> on a yacht to the island of Delos</li>
+      <li>I went <em>clubbing</em> at Ornos Beach</li>
+      <li>I ate lots of <em>Greek food</em></li>
+      <li>I explored <em>the island of Delos</em></li>
     </ul>
 <img src="greece1.jpg" style="width: 50%; height: 50%"/>​
 <img src="greece2.jpg" style="width: 50%; height: 50%"/>​
 
 
-    <h3><strong>Venice<strong></h3>
+    <h3><strong>Venice</strong></h3>
     <p>These are some of the things I did in Venice</p>
     <ul>
-      <li>Met up with my friend <em>Steph<em></li>
-      <li>Ate a lot of <em>Gelato!<em></li>
-      <li>Watched <em>glass blowing<em> in Milano</li>
-      <li>Went to <em>the beach<em> in Lido</li>
-      <li>Ate <em>lots of pasta<em>!</li>
+      <li>Met up with my friend <em>Steph</em></li>
+      <li>Ate a lot of <em>Gelato!</em></li>
+      <li>Watched <em>glass blowing</em> in Milano</li>
+      <li>Went to <em>the beach</em> in Lido</li>
+      <li>Ate <em>lots of pasta</em>!</li>
     </ul>
 <img src="venice1.jpg" style="width: 50%; height: 50%"/>​
 <img src="venice2.jpg" style="width: 50%; height: 50%"/>​
 
-    <h3><strong>Prague<strong></h3>
+    <h3><strong>Prague</strong></h3>
     <p>These are some of the things I did in Prague</p>
     <ul>
       <li>Walked over a bridge</li>
-      <li>Went to <em>the John Lennon wall!<em></li>
-      <li>Visited a <em>castle<em></li>
+      <li>Went to <em>the John Lennon wall!</em></li>
+      <li>Visited a <em>castle</em></li>
       <li>Got pretty sunburnt</li>
     </ul>
   <img src="prague1.jpg" style="width: 50%; height: 50%"/>​
   <img src="prague2.jpg" style="width: 50%; height: 50%"/>​
 
-    <h3><strong>Dublin<strong></h3>
+    <h3><strong>Dublin</strong></h3>
     <p>These are some of the things I did in Dublin</p>
     <ul>
-      <li>Listened to <em>irish<em> bands play <em>irish songs<em> in an <em>irish pub!<em></li>
-      <li>Drove around to <em>lots of castles<em></li>
-      <li>Checked out <em>Temple Bar<em></li>
-      <li>Visited Trinity College and the <em>Old Dublin Library<em></li>
+      <li>Listened to <em>irish</em> bands play <em>irish songs</em> in an <em>irish pub!</em></li>
+      <li>Drove around to <em>lots of castles</em></li>
+      <li>Checked out <em>Temple Bar</em></li>
+      <li>Visited Trinity College and the <em>Old Dublin Library</em></li>
     </ul>
     <img src="dublin1.jpg" style="width: 50%; height: 50%"/>​
     <img src="dublin2.jpg" style="width: 50%; height: 50%"/>​
