added playfair font

--- a/holiday-website.html
+++ b/holiday-website.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playfair+Display+SC" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Jess's holiday website</title>
   </head>
   <body>
-    <h1><strong>My Europe Trip</strong></h1>
+    <h1><span style="text-decoration: underline;text-decoration-style: wavy; text-decoration-color: #C6D7C7;">My Europe Trip</span>
+    </h1>
     <h2>These are the places I went.</h2>
 <div class="my-titles">
     <h3><strong>Mykonos</strong></h3>
@@ -13,11 +15,11 @@
     <p>These are some of the things I did in Mykonos</p>
     <ul>
       <div class="my-lists">
-      <li>My brother Ben got <em>married</em></li>
-      <li>I went <em>sailing</em> on a yacht to the island of Delos</li>
-      <li>I went <em>clubbing</em> at Ornos Beach</li>
-      <li>I ate lots of <em>Greek food</em></li>
-      <li>I explored <em>the island of Delos</em></li>
+      <li>My brother Ben got married</li>
+      <li>I went sailing on a yacht to the island of Delos</li>
+      <li>I went clubbing at Ornos Beach</li>
+      <li>I ate lots of Greek food</li>
+      <li>I explored the island of Delos</li>
         </div>
     </ul>
 <img src="greece1.jpg" style="width: 50%; height: 50%"/>​
@@ -29,11 +31,11 @@
     <p>These are some of the things I did in Venice</p>
     <ul>
       <div class="my-lists">
-      <li>Met up with my friend <em>Steph</em></li>
-      <li>Ate a lot of <em>Gelato!</em></li>
-      <li>Watched <em>glass blowing</em> in Milano</li>
-      <li>Went to <em>the beach</em> in Lido</li>
-      <li>Ate <em>lots of pasta</em>!</li>
+      <li>Met up with my friend Steph </li>
+      <li>Ate a lot of Gelato!</li>
+      <li>Watched glass blowing in Milano</li>
+      <li>Went to the beach in Lido</li>
+      <li>Ate lots of pasta!</li>
     </div>
     </ul>
 <img src="venice1.jpg" style="width: 50%; height: 50%"/>​
@@ -45,8 +47,8 @@
     <ul>
       <div class="my-lists">
       <li>Walked over a bridge</li>
-      <li>Went to <em>the John Lennon wall!</em></li>
-      <li>Visited a <em>castle</em></li>
+      <li>Went to the John Lennon wall!</li>
+      <li>Visited a castle</li>
       <li>Got pretty sunburnt</li>
     </div>
     </ul>
@@ -58,10 +60,10 @@
     <p>These are some of the things I did in Dublin</p>
     <ul>
       <div class="my-lists">
-      <li>Listened to <em>irish</em> bands play <em>irish songs</em> in an <em>irish pub!</em></li>
-      <li>Drove around to <em>lots of castles</em></li>
-      <li>Checked out <em>Temple Bar</em></li>
-      <li>Visited Trinity College and the <em>Old Dublin Library</em></li>
+      <li>Listened to irish bands play irish songs in an irish pub!</li>
+      <li>Drove around to lots of castles</li>
+      <li>Checked out Temple Bar</li>
+      <li>Visited Trinity College and the Old Dublin Library</li>
     </div>
     </ul>
     <img src="dublin1.jpg" style="width: 50%; height: 50%"/>​
